[gd_scene load_steps=23 format=2]

[ext_resource path="res://effects/water.gdshader" type="Shader" id=1]
[ext_resource path="res://scenes/game.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=1]
flip_faces = true
size = Vector3( 5, 3, 5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="SpatialMaterial" id=4]
metallic = 0.93
roughness = 0.17

[sub_resource type="SphereMesh" id=5]
radius = 0.1
height = 0.2
radial_segments = 32
rings = 16

[sub_resource type="SpatialMaterial" id=6]
emission_enabled = true
emission = Color( 1, 0.219608, 0.219608, 1 )
emission_energy = 4.3
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=7]
size = Vector3( 2, 0.1, 0.3 )

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="SpatialMaterial" id=10]
flags_transparent = true
params_cull_mode = 2
params_depth_draw_mode = 3
albedo_color = Color( 0.733333, 0.945098, 0.937255, 0.0235294 )
transmission_enabled = true
transmission = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=11]
size = Vector3( 0.49, 1, 0.49 )
subdivide_width = 10
subdivide_height = 10
subdivide_depth = 10

[sub_resource type="ShaderMaterial" id=12]
shader = ExtResource( 1 )
shader_param/water_level = 1.0
shader_param/albedo = Color( 0.435294, 0.792157, 1, 0.145098 )
shader_param/specular = 0.5
shader_param/metallic = 0.0
shader_param/roughness = 0.06
shader_param/point_size = 1.0
shader_param/transmission = Color( 0, 0, 0, 1 )
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )

[sub_resource type="Gradient" id=13]
colors = PoolColorArray( 0.464817, 0.753349, 0.915332, 0.576471, 0.294118, 0.741176, 0.996078, 0.631373 )

[sub_resource type="GradientTexture" id=14]
gradient = SubResource( 13 )
width = 128

[sub_resource type="ParticlesMaterial" id=15]
direction = Vector3( 0, 0, 0 )
spread = 11.12
initial_velocity = 1.0
initial_velocity_random = 0.37
angular_velocity = 101.65
angular_velocity_random = 1.0
color_ramp = SubResource( 14 )

[sub_resource type="SpatialMaterial" id=16]
flags_unshaded = true
vertex_color_use_as_albedo = true

[sub_resource type="SphereMesh" id=17]
material = SubResource( 16 )
radius = 0.005
height = 0.01
radial_segments = 12
rings = 6

[sub_resource type="BoxShape" id=18]
extents = Vector3( 0.25, 0.5, 0.25 )

[sub_resource type="Environment" id=19]
background_energy = 0.0
ambient_light_energy = 0.0
ambient_light_sky_contribution = 0.0
tonemap_mode = 3
ss_reflections_enabled = true
glow_enabled = true
glow_levels/1 = true
glow_levels/2 = true
glow_levels/3 = false
glow_levels/5 = false
glow_intensity = 0.17
glow_blend_mode = 0
glow_hdr_threshold = 1.5
glow_bicubic_upscale = true

[sub_resource type="GIProbeData" id=20]
bounds = AABB( -3.18018, -2.97742, -3.22369, 6.36035, 5.95484, 6.44739 )
cell_size = 0.0251851
to_cell_xform = Transform( 39.706, 0, 0, 0, 39.706, 0, 0, 0, 39.706, 126.272, 118.222, 128 )
dynamic_data = PoolIntArray( 0, 9, 256, 256, 256, 1, 0, 0, 0, 1094713344, 1094713344, 0, 737169536, 0, 0, 0, -1, -1, -1, -1, -1, -1, -1, -1, 0, 0, 8355711, 0 )
dynamic_range = 4
bias = 1.5
normal_bias = 0.0
propagation = 0.7
interior = true

[node name="Game" type="Spatial"]
script = ExtResource( 2 )

[node name="Room" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Box" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23464, -1.26703, 0 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box2" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23464, -1.26703, -0.635221 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box3" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23464, -0.762295, -0.291267 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box4" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 1.62415, -1.26703, -1.90517 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box5" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 2.23068, -1.26703, -1.71642 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box6" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 1.90226, -0.762295, -1.81862 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box7" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 1.62415, -1.26703, -1.90517 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box8" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 2.23068, -1.26703, -1.71642 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Box9" type="MeshInstance" parent="Room"]
transform = Transform( -0.297142, 0, -0.954833, 0, 1, 0, 0.954833, 0, -0.297142, 1.90226, -0.762295, -1.81862 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="CubeLight" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.89175, -0.423671, -1.72319 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight2" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.20787, -0.42367, -0.29826 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight4" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29525, 0.576296, -0.29826 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight5" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29525, 0.576296, 0.599108 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight7" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39887, 0.576296, -0.29826 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight8" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.39887, 0.576296, 0.599108 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight6" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.29525, 0.576296, 0.599108 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="CubeLight3" type="MeshInstance" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.23876, -0.81356, 0.126758 )
use_in_baked_light = true
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Shelf" type="MeshInstance" parent="Room"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.35084, 0.4235, 0 )
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Shelf2" type="MeshInstance" parent="Room"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2.37174, 0.4235, 0 )
use_in_baked_light = true
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Glass" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.00201, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="Box10" type="MeshInstance" parent="Glass"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.748375, 0 )
use_in_baked_light = true
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Water" type="MeshInstance" parent="Glass"]
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="Tween" type="Tween" parent="Glass/Water"]

[node name="WaterParticles" type="Particles" parent="Glass/Water"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27712, 0.257871 )
emitting = false
amount = 5000
lifetime = 0.6
process_material = SubResource( 15 )
draw_pass_1 = SubResource( 17 )

[node name="Timer" type="Timer" parent="Glass/Water"]
one_shot = true

[node name="Area" type="Area" parent="Glass"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.00201, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Glass/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 18 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.96837, 0, -0.249518, 0, 1, 0, 0.249518, 0, 0.96837, -0.849244, 0.878929, 1.95929 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 19 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.881015, -0.262353, 0.39368, 0, 0.832148, 0.554554, -0.473089, -0.48857, 0.733134, 0, 5.62942, 0 )
shadow_enabled = true

[node name="OmniLight" type="OmniLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.88726, 0 )
light_energy = 2.04
shadow_enabled = true
omni_attenuation = 0.933033

[node name="SpotLight" type="SpotLight" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.95375, 0 )
light_color = Color( 0.898039, 0.87451, 0.788235, 1 )
light_energy = 6.05
shadow_enabled = true
spot_range = 6.0
spot_attenuation = 0.420448
spot_angle = 22.4

[node name="GIProbe" type="GIProbe" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5117, 0 )
subdiv = 2
extents = Vector3( 3.18018, 2.97742, 3.22369 )
interior = true
data = SubResource( 20 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="WorldEnvironment"]
extents = Vector3( 3.50616, 3.35909, 2.74461 )
box_projection = true
enable_shadows = true
interior_enable = true

[connection signal="tween_step" from="Glass/Water/Tween" to="." method="_on_Tween_tween_step"]
[connection signal="timeout" from="Glass/Water/Timer" to="." method="_on_Timer_timeout"]
[connection signal="input_event" from="Glass/Area" to="." method="_on_Area_input_event"]
